<resources>
  <string name="app_name">WebIdentityApp</string>
  <string name="button_add">Add TOTP</string>
  <string name="hint_key">Key</string>
  <string name="button_add_key">Add key</string>
  <string name="text_scan_key">Scan key</string>


  <!-- Strings related to MainActivity-->
  <string name="scan_barcode_button">Scan barcode</string>
  <string name="no_barcode_captured">No barcode captured</string>
  <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

  <!-- Strings related to barcode scanner -->
  <string name="ok">OK</string>
  <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
  <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
  <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
  <string name="secret_key_is_displayed_here">Click button to display secret key</string>
  <string name="text_load_stored_key">show secret key</string>
  <string name="timer_counter_text">Timer counter is displayed here</string>
  <string name="textView_key_text">TOTP Key</string>
</resources>
